# xhisperflow

./: .gitignore  Cargo.toml  README.md  default_xhisperflowrc
.github/workflows/: release.yml
assets/macos/: AppIcon.icns
mako/: xhisperflow.ini
scripts/: build-macos-app.sh  build-macos-dmg.sh  generate-macos-icon.sh
src/: app.rs  config.rs  daemon.rs  lib.rs  macos_app.rs
