[package]
name = "xhisperflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3.13"

[[bin]]
name = "xhisperflow"
path = "src/bin/xhisperflow.rs"

[[bin]]
name = "xhisperflowtool"
path = "src/bin/xhisperflowtool.rs"

[[bin]]
name = "xhisperflowtoold"
path = "src/bin/xhisperflowtoold.rs"
