[package]
name = "xhisperflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3.13"

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.6"
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.25"
cpal = "0.17"
enigo = { version = "0.6", default-features = false }
global-hotkey = "0.7"
hound = "3.5"
objc = "0.2"
raw-window-handle = "0.6"
softbuffer = { version = "0.4", default-features = false }
tray-icon = { version = "0.22", default-features = false }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[[bin]]
name = "xhisperflow"
path = "src/bin/xhisperflow.rs"

[[bin]]
name = "xhisperflowtool"
path = "src/bin/xhisperflowtool.rs"

[[bin]]
name = "xhisperflowtoold"
path = "src/bin/xhisperflowtoold.rs"

[[bin]]
name = "xhisperflow-mac"
path = "src/bin/xhisperflow-mac.rs"
